<resources>
    <string name="app_name">Video</string>
    <string name="activate_permissions">Активировать права</string>
    <string name="video_watch">Смотреть видео</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="log_in">Войти</string>
    <string name="log_out">Выйти</string>
    <string name="confirm">Принять</string>
    <string name="default_url">http://95.56.236.114:53000/</string>
    <string name="refresh_info">Загрузить/Обновить информацию о телефоне</string>
</resources>
